test_cases/positive/unknown_escape.snek
export DEFAULT = Image("rust:latest\v");
