test_cases/negative/parser/missing_separator.snek
export DEFAULT = Exec(Image("rust:latest") "world");
